debugist/static/css/style.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    font-weight: bold;
}

main {
    flex: 1 0 auto;
    font-weight: bold;
}

.nav-font {
    font-weight: bold;
}

.header-text {
    font-weight: bold;
}

.debugist-nav {
    margin-top: 15px;
}

.footer-slogan {
    font-weight: bold;
}

